--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -29,9 +29,10 @@
 
             <a href='/rango/'>Index</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
-
         </div>
+        <div>
+            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+        </div>>
 
     </body>
 
