--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-
+    
     <head>
         <title>Rango</title>
-        
     </head>
 
     <body>
@@ -20,10 +19,13 @@
             {% else %}
             <strong>No pages currently in category.</strong>
             {% endif %}
+
+            <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br />
         {% else %}
             The specified category does not exist.
         {% endif %}
         </div>
+
         <a href="/rango/">Index</a>
     </body>
 
