--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,39 +1,23 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load static %}
 
-<html>
+{% block title_block %}
+    About Rango
+{% endblock %}
 
-    <head>
+{% block body_block %}
 
-           <title>Rango</title>
+    <h1>Rango says...</h1>
 
-    </head>
+    <div>
+    here is the about page.<br />
+    <strong>This tutorial has been put together by Tomislav</strong>
+    </div>
 
- 
-
-    <body>
-
-        <h1>Rango says...</h1>
-
-        <div>
-
-            here is the about page.<br />
-
-            <strong>This tutorial has been put together by Tomislav</strong>
-
-
-        </div>
-
-        <div>
-
-            <a href='/rango/'>Index</a><br />
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
-        </div>
-        <div>
-            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
-        </div>>
-
-    </body>
-
-</html>
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+    </div>
+    <div>
+        <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
+    </div>>
+{% endblock %}
