--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -20,4 +20,5 @@
     <div>
         <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
     </div>>
+    <p>Visits: {{ visits }}</p>
 {% endblock %}
